Add first HTML exercise from curriculum

--- a/welcome.html
+++ b/welcome.html
@@ -1,19 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
+    <title>Veridian dynamics</title>
     <meta charset="UTF-8">
-    <title>Title</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <h2>This is welcome.html</h2>
-    <p>My favorite language is JS</p>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus, dicta dolore molestias odio omnis optio pariatur repellat? At dicta ducimus explicabo fugit natus neque officia optio perferendis quo voluptatem. Harum?</p>
 
-    <p>This is another paragraph. Paragraphs are block elements</p>
+<header>
+    <h1 class="fancy-header" id="title" class="title">Welcome to Veridian Dynamics!</h1>
 
-    <div>This is a div. Divs are block elements</div>
-    <a href="http://codeup.com">Codeup link</a>
-    <p>This is another paragraph, but a <span>SPAN is inline</span></p>
+    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problem with <b><i>technology</i></b></p>
+
+</header>
+<hr>
+<h2>Core Values</h2>
+<ul>
+    <li>Competence</li>
+    <li>Involvement</li>
+    <li>Technology</li>
+</ul>
+<h2>Our process</h2>
+<ol>
+    <li>Plan</li>
+    <li>Evaluate</li>
+    <li>Implement</li>
+</ol>
+<hr>
+<h2>Company Vision</h2>
+
+<img src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg" alt="" width="300" height="300">
+<img src="https://images.pexels.com/photos/534163/pexels-photo-534163.jpeg" alt="" width="300" height="300">
+<br>
+<img src="https://images.pexels.com/photos/534165/pexels-photo-534165.jpeg" alt="" width="300" height="300">
+<img src="https://images.pexels.com/photos/534166/pexels-photo-534166.jpeg" alt="" width="300" height="300">
+
+<h2>Our product</h2>
+<table >
+    <tr>
+        <th>Plan</th>
+        <th>Price</th>
+        <th>Features</th>
+    </tr>
+    <tr>
+        <td>Starter</td>
+        <td>$99</td>
+        <td>Base tech</td>
+    </tr>
+    <tr>
+        <td>Medium</td>
+        <td>$199</td>
+        <td>Medium tech</td>
+    </tr>
+    <tr>
+        <td>Extra</td>
+        <td>$299</td>
+        <td>Extra tech</td>
+    </tr>
+</table>
+
+
+<footer>
+    <p class="fancy-header"><i>All products come with out quality gaurantee&trade;</i></p>
+    <a href="#title" id="top">Go to top</a>
+</footer>
+
 </body>
 </html>
