--- a/welcome.html
+++ b/welcome.html
@@ -7,8 +7,7 @@
 <body>
 
 <header>
-    <h1 class="fancy-header" id="title" class="title">Welcome to Veridian Dynamics!</h1>
-
+    <h1 class="title">Welcome to Veridian Dynamics!</h1>
     <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problem with <b><i>technology</i></b></p>
 
 </header>
@@ -25,7 +24,15 @@
     <li>Evaluate</li>
     <li>Implement</li>
 </ol>
+<h2>2020 Vision</h2>
+<ul>
+    <li>Become #1 in Technology</li>
+    <li>Increase success by 20%</li>
+    <li>Increase business by 30%</li>
+</ul>
+
 <hr>
+
 <h2>Company Vision</h2>
 
 <img src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg" alt="" width="300" height="300">
@@ -60,7 +67,7 @@
 
 
 <footer>
-    <p class="fancy-header"><i>All products come with out quality gaurantee&trade;</i></p>
+    <p><i>All products come with out quality gaurantee&trade;</i></p>
     <a href="#title" id="top">Go to top</a>
 </footer>
 
