Add additional text

--- a/welcome.html
+++ b/welcome.html
@@ -7,11 +7,17 @@
 <body>
 
 <header>
-    <h1 class="title">Welcome to Veridian Dynamics!</h1>
-    <p>At Veridian Dynamics, <strong>we</strong> solve <i>your</i> problem with <b><i>technology</i></b></p>
+    <h1 id="title">Welcome to Veridian Dynamics!</h1>
+    <p>At Veridian Dynamics,
+        <strong>we</strong>
+        solve<i>your</i>
+        problem with <b><i>technology</i></b>
 
+    </p>
 </header>
+
 <hr>
+
 <h2>Core Values</h2>
 <ul>
     <li>Competence</li>
@@ -35,12 +41,16 @@
 
 <h2>Company Vision</h2>
 
-<img src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg" alt="" width="300" height="300">
-<img src="https://images.pexels.com/photos/534163/pexels-photo-534163.jpeg" alt="" width="300" height="300">
-<br>
-<img src="https://images.pexels.com/photos/534165/pexels-photo-534165.jpeg" alt="" width="300" height="300">
-<img src="https://images.pexels.com/photos/534166/pexels-photo-534166.jpeg" alt="" width="300" height="300">
-
+<table>
+    <tr>
+        <td><img src="https://images.pexels.com/photos/534164/pexels-photo-534164.jpeg" alt="" width="300" height="300"></td>
+        <td><img src="https://images.pexels.com/photos/534163/pexels-photo-534163.jpeg" alt="" width="300" height="300"></td>
+    </tr>
+    <tr>
+        <td><img src="https://images.pexels.com/photos/534165/pexels-photo-534165.jpeg" alt="" width="300" height="300"></td>
+        <td><img src="https://images.pexels.com/photos/534166/pexels-photo-534166.jpeg" alt="" width="300" height="300">        </td>
+    </tr>
+</table>
 <h2>Our product</h2>
 <table >
     <tr>
@@ -61,14 +71,18 @@
     <tr>
         <td>Extra</td>
         <td>$299</td>
-        <td>Extra tech</td>
+        <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aliquid at aut dolor doloribus exercitationem fugit, iste magnam minus mollitia optio possimus qui quisquam quo rem sunt velit. Enim, id.</td>
+    </tr>
+    <tr>
+        <td>Awesome Package with Gold trim</td>
+        <td>$40</td>
+        <td>See the title. It's all there</td>
     </tr>
 </table>
 
-
 <footer>
     <p><i>All products come with out quality gaurantee&trade;</i></p>
-    <a href="#title" id="top">Go to top</a>
+    <a href="#title">Go to top</a>
 </footer>
 
 </body>
