Add styling to welcome.html

--- a/welcome.html
+++ b/welcome.html
@@ -5,10 +5,16 @@
     <meta charset="UTF-8">
 
     <style>
+        h1, h2, h3, h4, h5, h6 {
+            color: darkorange;
+            text-decoration: underline;
+        }
         /* element selector */
-        body table{
+        body {
             color: aquamarine;
-            background: darksalmon;
+            background-color: teal;
+            background-image: url("images/hypnotize.png");
+            background-repeat: repeat-x;
         }
 
         /* Multiple Selector */
@@ -44,7 +50,7 @@
         header>h1 {
             background-color: lawngreen;
             box-shadow: 10px 10px 5px yellow    ;
-
+            text-align: center;
         }
 
 
