Add first draft of company resume

--- a/forms.html
+++ b/forms.html
@@ -55,19 +55,27 @@
                 <label for="browser">What browser are you using?</label>
                 <select name="browser" id="browser">
 
-                    <option value="chrome">Chrome</option>
-                    <option value="firefox">Firefox</option>
-                    <option value="safari">Safari</option>
+                    <option class="browser-option" value="chrome">Chrome</option>
+                    <option class="browser-option" value="firefox">Firefox</option>
+                    <option class="browser-option" value="safari">Safari</option>
+                    <option class="browser-option" value="canary">Canary</option>
+                    <option class="browser-option" value="opera">Opera</option>
+                    <option class="browser-option" value="Brave">Brave</option>
 
                 </select>
 
             </div>
+            
+            <div class="footer"></div>
+
+            <input type="text" id="password">
 
 
             <button>Submit</button>
 
         </form>
 
+        <a href="">Click here to download our free computer speeder-upper</a>
 
     </main>
 
