styled list items and p tags

--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Resume</title>
+    <link rel="stylesheet" href="css/resume.css">
 </head>
 <body>
 <h1>Our awesome resume</h1>
