--- a/media-queries.html
+++ b/media-queries.html
@@ -5,6 +5,7 @@
     <title>Media Queries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/media-queries.css">
+    <link rel="stylesheet" href="css/grid-layout.css">
 </head>
 <body>
     <div class="alert-info hidden-on-mobile">
@@ -20,16 +21,18 @@
         </ul>
     </nav>
     <div class="header-img">
-        <img src="http://lorempixel.com/g/900/400" alt="">
+        <img src="http://lorempixel.com/g/900/400" class="row" alt="placeholder image">
     </div>
-    <section id="main" class="main">
-        <h2>Main Section</h2>
-        <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
-    </section>
-    <section class="sub-section">
-        <h2>Sub-section</h2>
-        <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
-    </section>
+    <div class="row">
+        <section id="main" class="main column two-thirds">
+            <h2>Main Section</h2>
+            <p>Amet lorem accusantium maxime quis iusto. Sit aliquid quidem at animi commodi, iusto harum, non. Accusantium sequi consectetur deleniti soluta tempora. Maxime maiores blanditiis veritatis vitae amet maiores sapiente in?</p>
+        </section>
+        <section class="sub-section column one-third">
+            <h2>Sub-section</h2>
+            <p>Amet optio quidem voluptatum neque esse at saepe, reiciendis quaerat architecto unde minima aspernatur harum cum totam non amet soluta. Ea quae odio harum magni ab vitae tenetur. Itaque numquam!</p>
+        </section>
+    </div>
     <footer>
         <p>(c) 2017 All rights reserved</p>
         <div id="social-media-links">
