--- a/order-pizza.html
+++ b/order-pizza.html
@@ -3,6 +3,15 @@
     <title>Order Online</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
+    <style>
+        .pizza-hero-image {
+            background-image: url(images/pizza.png);
+        }
+        .pizza-hero-image h1 {
+            background-color: white;
+            opacity: 0.7;
+        }
+    </style>
 
     <!-- custom styles go here -->
 </head>
@@ -44,8 +53,9 @@
     </div><!-- /.container-fluid -->
 </nav>
 
-<h1>Hello World</h1>
-
+<div class="jumbotron pizza-hero-image">
+    <h1 class="text-center">Welcome To Pizza World!</h1>
+</div>
 
 <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
