Add navigation for pizza ordering

--- a/order-pizza.html
+++ b/order-pizza.html
@@ -57,6 +57,23 @@
     <h1 class="text-center">Welcome To Pizza World!</h1>
 </div>
 
+<h2>Build Your Own Pizza!</h2>
+
+<ul class="nav nav-tabs">
+    <li role="presentation" class="active"><a href="#">
+        Size And Crust
+        <span class="badge">1</span>
+    </a></li>
+    <li role="presentation"><a href="#">
+        <span class="badge">2</span>
+        Cheese and Sauce
+    </a></li>
+    <li role="presentation"><a href="#">
+        Toppings
+        <span class="badge">3</span>
+    </a></li>
+</ul>
+
 <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- custom JS goes here -->
