--- a/order-pizza.html
+++ b/order-pizza.html
@@ -74,6 +74,180 @@
     </a></li>
 </ul>
 
+<div class="panel panel-info">
+    <div class="panel-heading">Choose size and crust</div>
+    <div class="panel-body">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Hand Tossed</div>
+            <div class="panel-body">Garlic seasoned .....</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Small (10")
+                        </label>
+                    </div>
+                </li>
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Medium (12")
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Crispy Thin</div>
+            <div class="panel-body">It's Crispy...</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Medium (12")
+                        </label>
+                    </div>
+                </li>
+                <li class="list-group-item list-group-item-info">
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Large (14")
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+   <div class="panel-footer text-right">
+       <button class="btn btn-primary">
+           Next Step
+           <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+       </button>
+   </div>
+
+</div>
+
+<div class="panel panel-info">
+    <div class="panel-heading">Choose Cheese and Sauce</div>
+    <div class="panel-body">
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Hand Tossed</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <label>Cheese</label>
+                    <select class="form-control">
+                        <option>Light</option>
+                        <option>Regular</option>
+                        <option>Extra</option>
+                        <option>Extra Extra</option>
+                    </select>
+                </li>
+            </ul>
+        </div>
+
+        <div class="panel panel-default">
+            <div class="panel-heading">Sauce?</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <label>What kind of sauce?</label>
+                    <select class="form-control">
+                        <option>Marinara</option>
+                        <option>Tomato</option>
+                        <option>Ranch</option>
+                        <option>BBQ and Alfredo (Heartburn Special)</option>
+                    </select>
+                </li>
+                <li class="list-group-item list-group-item-info">
+                    <label>How Much Sauce</label>
+                    <select class="form-control">
+                        <option>Just a little</option>
+                        <option>Regular</option>
+                        <option>As much as is legally possible</option>
+                    </select>
+                </li>
+            </ul>
+        </div>
+
+    </div>
+
+    <div class="panel-footer text-right">
+        <div class="btn-group" role="group" aria-label="...">
+            <button class="btn btn-primary">
+                <span class="glyphicon glyphicon-triangle-left" aria-hidden="true"></span>
+                Previous Step
+            </button>
+            <button class="btn btn-primary">
+                Next Step
+                <span class="glyphicon glyphicon-triangle-right" aria-hidden="true"></span>
+            </button>
+        </div>
+    </div>
+
+</div>
+
+<div class="panel panel-info">
+    <div class="panel-heading">Choose Toppings</div>
+    <div class="panel-body">
+        <div class="panel panel-default">
+            <div class="panel-heading">Meats</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-danger">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Pepperoni
+                        </label>
+                    </div>
+                </li>
+                <li class="list-group-item list-group-item-danger">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Sausage
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">Non-Meats</div>
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-info">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Green Peppers
+                        </label>
+                    </div>
+                </li>
+                <li class="list-group-item list-group-item-info">
+                    <div class="checkbox">
+                        <label>
+                            <input type="checkbox" name="optionsRadios" id="optionsRadios1" value="option1">
+                            Mushrooms
+                        </label>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="panel-footer text-right">
+        <button class="btn btn-primary">
+            Checkout
+            <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+        </button>
+    </div>
+</div>
+
 <script src="//code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <!-- custom JS goes here -->
