--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h1 {
 
     <h1>It's all in the console....</h1>
 
-    <script src="js/loops-lecture.js"></script>
+    <script src="js/objects-lecture.js"></script>
 
 </body>
 </html>
