Finish selectors exercise

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -20,34 +20,34 @@
 
     <h1>Jake Weary</h1>
 
-    <p>
+    <p class="codeup" id="paragraph">
         Jacob "Jake" Weary (born February 14, 1990) is an American actor, musician, singer-songwriter and music producer.
     </p>
-    <p>
+    <p id="codeup">
         He is best known for his roles as Luke Snyder on the CBS soap opera As the World Turns, Vince Keeler in NBC's action-drama series Chicago Fire, and for his role as Kevin Dawg in Fred: The Movie (2010) and its two sequels and television adaptation, Nickelodeon's Fred: The Show.
     </p>
-    <p>
+    <p class="codeup">
         He currently stars as Deran Cody in the TNT drama series Animal Kingdom, based on the Australian film of the same name.
     </p>
 
     <h2>Filmography</h2>
 
-    <h3>Film</h3>
+    <h3 class="sub-heading">Film</h3>
 
     <ul>
-        <li>2008: Assassination of a High School President</li>
-        <li>2010: Fred: The Movie</li>
-        <li>2010: Altitude</li>
-        <li>2011: Fred 2: Night of the Living Fred</li>
-        <li>2012: Fred 3: Camp Fred</li>
-        <li>2014: Glove</li>
-        <li>2014: Zombeavers</li>
-        <li>2014: The Deal</li>
-        <li>2014: It Follows</li>
-        <li>2017: Message from the King</li>
+        <li class="list-item">2008: Assassination of a High School President</li>
+        <li class="list-item">2010: Fred: The Movie</li>
+        <li class="list-item">2010: Altitude</li>
+        <li class="list-item">2011: Fred 2: Night of the Living Fred</li>
+        <li class="list-item">2012: Fred 3: Camp Fred</li>
+        <li class="list-item">2014: Glove</li>
+        <li class="list-item">2014: Zombeavers</li>
+        <li class="list-item">2014: The Deal</li>
+        <li class="list-item">2014: It Follows</li>
+        <li class="list-item">2017: Message from the King</li>
     </ul>
 
-    <h3>Television</h3>
+    <h3 class="sub-heading">Television</h3>
 
     <ul>
         <li>2004: Law & Order: Special Victims Unit</li>
@@ -69,9 +69,7 @@
 </div> <!-- / .container -->
 
 <script src="./js/jquery-2.2.4.js"></script>
-
 <script src="js/jquery-selectors.js"></script>
-
 
 </body>
 </html>
