Add code examples from events lesson

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -69,7 +69,8 @@
 </div> <!-- / .container -->
 
 <script src="./js/jquery-2.2.4.js"></script>
-<script src="js/jquery-selectors.js"></script>
+
+<script src="js/jquery-events.js"></script>
 
 </body>
 </html>
