--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -70,7 +70,7 @@
 
 <script src="./js/jquery-2.2.4.js"></script>
 
-<script src="js/jquery-events.js"></script>
+<script src="js/jquery-keyboard-events.js"></script>
 
 </body>
 </html>
