Update example html

--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -20,6 +20,10 @@
 
     <h1>Jake Weary</h1>
 
+    <input id="my-input" />
+
+    <div id="output"></div>
+
     <p class="codeup" id="paragraph">
         Jacob "Jake" Weary (born February 14, 1990) is an American actor, musician, singer-songwriter and music producer.
     </p>
