--- a/konami.html
+++ b/konami.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 
+    <h1>Enter The Konami Code</h1>
+
+    <div id="key-display"></div>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 <script src="js/konami.js"></script>
