Adding jQuery Animate example

--- a/animateShip.html
+++ b/animateShip.html
@@ -21,7 +21,7 @@
             top: 150px;
         }
         .boom {
-            background-image: url("boom.jpg");
+            background-image: url("./images/boom.jpg");
             display: none;
             background-color: white !important;
         }
@@ -76,7 +76,7 @@
         </div>
         <div class="col-md-6 ">
             <div class="shipBackground">
-                <img class="center-block" src="ship.png">
+                <img class="center-block" src="./images/ship.png">
             </div>
         </div>
     </div>
