--- a/orders.html
+++ b/orders.html
@@ -49,10 +49,35 @@
 
 			function makeRequestAndUpdatePage() {
 
+				var ajaxRequest = $.ajax("./data/orders.json");
+
+				ajaxRequest.done(function(data) {
+					buildHTML(data);
+				});
+
+				ajaxRequest.fail(function(jqXhr, status) {
+					console.log(status + " request failed");
+				});
+
 			}
 
 			function buildHTML(orders) {
+				var ordersHTML = "";
 
+				orders.forEach(function(order) {
+
+					ordersHTML += "<section>";
+					ordersHTML += "<h3>Order #" + order.orderNumber + "</h3>";
+					ordersHTML += "<dl>";
+					ordersHTML += "<dt>Item Ordered</dt>";
+					ordersHTML += "<dd>" + order.itemOrdered + "</dd>";
+					ordersHTML += "<dt>Ordered By</dt>";
+					ordersHTML += "<dd>" + order.orderedBy + "</dd>";
+					ordersHTML += "</section>";
+
+				});
+
+				$('#orders').html(ordersHTML);
 			}
 
 			$('#update').click(makeRequestAndUpdatePage);
